ingress/ingress-example.yaml
# Deployment
apiVersion: apps/v1 # apps = APIGROUP
kind: Deployment
metadata: # Deployment medatada
  name: ingress-depl
  labels:
    app: front
spec: # ReplicaSet
  replicas: 3
  selector:
    matchLabels:
      app: front
  template: # Pod
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          command:
            [
              "sh",
              "-c",
              "echo VERSION 1.0 from $HOSTNAME > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'",
            ]
---
apiVersion: v1
kind: Service
metadata: # Service metadata
  name: app-v1
  labels:
    app: front
spec:
  type: ClusterIP # Type of service
  selector: # What label are we going to use to observe the pods
    app: front
  ports:
    - protocol: TCP
      port: 8080 # Where the service is going to hear
      targetPort: 80 # Which port the service is going to consume
