ingress/ingress-rules-by-host-and-path.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app1.mydomain.com
      http:
        paths:
          backend:
            serviceName: app-v1
            servicePort: 8080
    - http:
      paths:
        - path: /test
          backend:
            serviceName: app-v1
            servicePort: 8080
