ingress/ingress-rules.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app1.mydomain.com
      http:
        paths:
          - path: /appv1
            backend:
              serviceName: app-v1
              servicePort: 8080
    - host: app2.mydomain.com
      http:
        paths:
          - backend:
              serviceName: api-server-svc
              servicePort: 9090
